# planner

./: .gitignore  CLAUDE.md  README.md  app.py  example.py  import_config.json  main.py  projects.json  projects.sample.json  pyproject.toml  schedule.qmd  setup.py
.github/workflows/: ci.yml
archive/: app.py
memory-bank/: progress.md  project_context.md
osparse/: README.md  __init__.py  extract_cpos_projects.py  parse_cpos.py
planner/: __init__.py  analysis.py  cli.py  holidays.py  importer.py  models.py  planner.py  scheduler.py  task.py  visualization.py
tests/: __init__.py  test_osparse.py  test_planner.py  test_task.py
