[project]
name = "planner"
version = "0.1.0"
description = "A minimalist project planner with GitHub-style tile visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]

[project.scripts]
planner = "planner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
