[project]
name = "planner"
version = "0.1.0"
description = "A minimalist project planner with GitHub-style calendar visualizations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.9",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
